# Testing_imgui_bundle

./: .clang-format  .gitignore  BACKUP_API_SUMMARY.md  BUILD_STATUS.md  CMakeLists.txt  DATABASE_REFACTOR_SUMMARY.md  ImGui_Bundle_Kitchen_Sink.node_editor.json  KitchenSinkImgui.data  KitchenSinkImgui.html  KitchenSinkImgui.js  README.md  WASM_BUILD_FIXED.md  database_manager.h  index.html  main.cpp  nats_client.h  nats_client_native.cpp  nats_client_wasm.cpp  vcpkg.json  verify_refactor.sh
.agent/workflows/: wasm-build.md
cmake/: FindThreads.cmake
database/: ARCHITECTURE.md  ASYNC_TABLE_EXAMPLES.md  ASYNC_TABLE_SUMMARY.md  ASYNC_TABLE_WIDGET_v2_FEATURES.md  BACKUP_API.md  CHANGELOG.md  EXAMPLES.md  INDEX.md  KNOWN_ISSUES.md  MIGRATION.md  PERFORMANCE.md  QUICK_START.md  README.md  TYPED_WIDGET_SUMMARY.md  TYPE_ERASURE_EXAMPLE.md  async_table_widget.h  async_table_widget_typed.h  database_manager.h  database_mode.h  foo_multi_index_table_model.h  market_data_multi_index_table_model.h  reactive_list_widget.h  reactive_two_field_collection.h
database/repositories/: foo_repository.h  foo_repository_typed.h
database/schemas/: table_foo.h
tests/: benchmark_async_table_paths.cpp  selection_stability_test.cpp  smoke_nats_lifecycle.cpp  smoke_wasm_nats_runtime.cpp
